--- a/package.json
+++ b/package.json
@@ -29,13 +29,31 @@
   },
   "homepage": "https://github.com/muturgan/bro-crud#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "@adminjs/express": "^4.0.1",
+    "@adminjs/typeorm": "^2.0.1",
+    "adminjs": "^5.5.1",
+    "class-validator": "^0.13.2",
+    "express": "^4.17.2",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.2",
+    "mysql2": "^2.3.3",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/flat": "^5.0.2",
     "@types/node": "^14.18.10",
+    "@types/react-datepicker": "^4.3.4",
+    "@types/react-redux": "^7.1.22",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.21",
+    "@types/styled-system": "^5.1.15",
+    "@types/validator": "^13.7.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
+    "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   }
